Attempt to fix uneven circles.

--- a/src/components/GraphEditor/comp.scss
+++ b/src/components/GraphEditor/comp.scss
@@ -16,7 +16,7 @@
   .dock-item {
     display: inline-block;
     vertical-align: top;
-    font-size: 0.8em;
+    font-size: 0.7em;
     .node {
       margin: 0.3em 1em;
     }
